client/client_pages/profile/profile.css
@import url(/client/base.css);

:root {
    --base-font-size: 1.25rem;
    --main-label-size: 1.25rem;
    --btn-big-font-size: 1.5rem;

    --btn-part-size: 40px;
    --btn-img-size: 24px;
}
body {
    grid-template-areas:
        "h"
        "m"
        "f";
    grid-template-rows: 135px auto 35px;
}
main {
    display: grid;
    grid-template-areas:
        "stats stats"
        "user recommendations"
        "null recommendations";
    grid-template-rows: min-content auto;
    grid-template-columns: 300px auto;
    gap: 35px;
}
#stats-border {
    grid-area: stats;
    --cocktail-img-size: 220px;
    --cocktail-name-font-size: 1.25rem;
}
#user-info {
    grid-area: user;
}
#recommendation-border {
    grid-area: recommendations;
    --cocktail-name-font-size: 1.15rem;
}

.subheader {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    margin-bottom: 0;
}
.btn-edit {
    --btn-part-size: 30px;
    --btn-img-size: 20px;
}

.element-inner-container {
    position: relative;
    overflow-x: auto;
    overflow-y: hidden;
    width: 100%;
    height: 43px;
    white-space: nowrap;
}
.element-input.tags {
    display: inline-block;
    white-space: nowrap;
    min-width: 260px;
    width: max-content;
    overflow-x: auto;
    max-width: 90%;
}
.tags-content {
    position: absolute;
    left: 5px;
    right: 5px;
    overflow-x: auto;
    white-space: nowrap;
    border-radius: 35px;
    background-color: var(--white-33-opacity);
    padding: 5px 15px;
    max-width: 100%;
}
.input-writable {
    color: black;
    text-shadow: none;
    background-color: white;
}
.element-inner-container::-webkit-scrollbar {
    width: 0;
    height: 0;
}
.element-inner-container::-webkit-scrollbar-track,
.element-inner-container::-webkit-scrollbar-thumb {
    background: transparent;
}

.btn-container {
    margin-top: 5%;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

#stats-border {
    display: grid;
    grid-template-areas:
        "fav stats";
    grid-template-columns: calc(var(--cocktail-img-size) + 20px) auto;
    column-gap: 2%;
}
#fav-cocktail {
    grid-area: fav;
}
#stats {
    grid-area: stats;
}
#placeholder-fav {
    width: var(--cocktail-img-size);
    height: var(--cocktail-img-size);
    border-radius: 10px;
}

.stats-bar-container {
    height: 30px;
    width: calc(100% - 15px);
    padding: 10px 0 10px 0;
    margin: 10px 0 20px 7px;
    border-radius: 15px;
    background: var(--grey-50-opacity);
    overflow: hidden;
}
.stats-bar {
    height: 100%;
    width: 100%;
    background: var(--grey);
    filter: drop-shadow(0 0 3px var(--black-66-opacity));
}

.stats-container {
    display: grid;
    grid-template-areas:
        "s-r s-s";
    align-content: center;
}
.stats-container > * {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    height: 100%;
}
.stats-ratings {
    grid-area: s-r;
}
.stats-sum {
    grid-area: s-s;
}
.stat-item {
    display: grid;
    grid-template-areas:
        "s-img s-label s-value";
    align-items: center;
    justify-content: flex-start;
    gap: 5%;
    margin-bottom: 10px;
}
.stat-label {
    grid-area: s-label;
    color: white;
}
.stat-value {
    grid-area: s-value;
    color: var(--orange);
}

@media (max-width: 900px) {
    :root {
        --base-font-size: 1rem;
        --tag-font-size: 1.1rem;
        --main-font-size: 1.15rem;
        --cocktail-rating-font-size: 1.0rem;
        --title-font-size: 1.15rem;
        --btn-big-font-size: 1.35rem;

        --btn-part-size: 35px;
        --btn-img-size: 22px;
    }
}

@media (max-width: 750px) {
    main {
        grid-template-areas:
            "user"
            "stats"
            "recommendations";
        grid-template-rows: min-content;
        grid-template-columns: auto;
    }
    #stats-border {
        grid-template-areas:
            "fav"
            "stats";
        grid-template-columns: auto;
        column-gap: 2%;
        text-align: center;
        white-space: nowrap;
    }
    .stats-container {
        grid-template-areas:
            "s-r"
            "s-s";
        justify-content: center;
    }
    .stats-sum .stat-item {
        height: 45px;
    }
    #fav-cocktail {
        text-align: center;
        justify-self: center;
    }
    .element-border {
        width: 100%;
    }
    .element-input.tags {
        min-width: calc(100% - 5px);
    }
}

